# JNLuaJIT

./: .classpath  .project  README.md  README.txt  WIKI.md  build.gradle  pom.xml
docs/: BuildingTheNativeLibrary.md  GettingStarted.md  Home.md  InterfacingWithJavaFromLua.md  InterfacingWithLuaFromJava.md  JNLuaConsole.md  JSR223Provider.md  JavaApiReference.md  JavaModule.md  JavaVMModule.md  LuaApiReference.md  PortingToAndroid.md  README.md  References.md  RelatedWork.md  TableOfContents.md
src/main/assembly/: native.xml
src/main/c/: javavm.c  javavm104.c  jnlua.c  jnlua104.c
src/main/c/Linux/: Makefile  luajit
src/main/c/Linux-aarch64/: CMakeLists.txt  Makefile  build.sh
src/main/c/Mac-arm/: CMakeLists.txt  build.sh
src/main/c/MacOSX/: Makefile
src/main/c/MingW/: Makefile
src/main/c/Win32/: CMakeLists.txt  build.sh
src/main/c/Win64/: build.sh
src/main/java/com/esotericsoftware/reflectasm/: AccessClassLoader.java  Accessor.java  ClassAccess.java  ClassInfo.java  ConstructorAccess.java  FieldAccess.java  HandleWrapper.java  Handles.java  LambdaAccess.java  MethodAccess.java  WrapperFactory.java
src/main/java/com/esotericsoftware/reflectasm/util/: AsmUtil.java  NumberUtils.java
src/main/java/com/naef/jnlua/: BufferWriter.java  Converter.java  DefaultConverter.java  DefaultJavaReflector.java  Invoker.java  JavaFunction.java  JavaModule.java  JavaReflector.java  LuaError.java  LuaException.java  LuaGcMetamethodException.java  LuaMemoryAllocationException.java  LuaMessageHandlerException.java  LuaRuntimeException.java  LuaStackTraceElement.java  LuaState.java  LuaSyntaxException.java  LuaTable.java  LuaType.java  LuaValueProxy.java  NamedJavaFunction.java  NativeSupport.java  TypedJavaObject.java
src/main/java/com/naef/jnlua/console/: LuaConsole.java
src/main/java/com/naef/jnlua/debug/: LuaMemoryDiagnostics.java  package-info.java
src/main/java/com/naef/jnlua/reflect/: Accessor.java  FieldAccessor.java  Invocable.java  InvocableAccessor.java  InvocableConstructor.java  InvocableMethod.java  InvocableProxy.java  JavaReflector.java  PropertyAccessor.java
src/main/java/com/naef/jnlua/script/: CompiledLuaScript.java  LuaBindings.java  LuaScriptEngine.java  LuaScriptEngineFactory.java
src/main/java/com/naef/jnlua/util/: AbstractTableList.java  AbstractTableMap.java
src/test/java/com/esotericsoftware/reflectasm/: ClassAccessTest.java  ClassLoaderTest.java  ConstructorAccessTest.java  ConvertionTest.java  FieldAccessTest.java  MethodAccessTest.java  test.java
src/test/java/com/esotericsoftware/reflectasm/benchmark/: Benchmark.java  ClassAccessBenchmark.java  ConstructorAccessBenchmark.java  FieldAccessBenchmark.java  MethodAccessBenchmark.java
src/test/java/com/naef/jnlua/test/: AbstractLuaTest.java  CollectionTest.java  JavaFunctionTest.java  JavaModuleTest.java  JavaReflectionTest.java  LuaConsoleTest.java  LuaExceptionTest.java  LuaMemoryDiagnosticsTest.java  LuaScriptEngineTest.java  LuaStateErrorTest.java  LuaStateTest.java  LuaTableMemoryLeakTest.java  LuaTest.java  NativeLibraryTest.java  PerformanceTest.java  TestObjectMemberTest.java
src/test/java/com/naef/jnlua/test/fixture/: EventCallback.java  TestObject.java
src/test/java/me/earth/handlewrapper/: BenchmarkQuickDirty.java  TestCases.java
src/test/java/me/earth/handlewrapper/util/: TestClass.java
src/test/java/test/: Many.java  Outer.java  Test1.java  TestClass_setObject.java  TestInvisibleClass.java  TestObject.java  TestObject1.java
src/test/resources/com/naef/jnlua/test/: JavaModule.lua  Reflection.lua  TableMemoryLeak.lua
